--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 		</div>
 
 		<!-- ETSY -->
-		<div>
+		<div class="bord-b-2-solid-tan pad-b-25">
 			
 			<!-- ETSY HEADING -->
 			<div class="pad-40-0-5-0">
@@ -545,8 +545,9 @@
 		</div>
 
 
+
 		<!-- EBAY -->
-		<div>
+		<div class="bord-b-2-solid-tan pad-b-25">
 
 			<!-- EBAY HEADER -->
 			<div class="pad-40-0-5-0">
@@ -805,7 +806,6 @@
 
 		</div>
 
-	
 
 
 		<!-- Amazon -->
@@ -1084,19 +1084,23 @@
 			<div class="float-r font-tan font-fam-muli font-size-13 txt-algn-r ms-txt-algn-cntr ms-float-0">
 
 				<ul>
-					<li>giftpitch@giftpitch.com</li>
-					<li>1-800-012-3456</li>
+					<li><a href="mailto:admin@giftpitch.com" target="_blank" class="email">admin@giftpitch.com</a></li>
+					<li>1-800-123-4567</li>
 					<li>339 E Chicago Avenue</li>
 					<li>Chicago, Illinois 60611</li>
 				</ul>
 
 				<p>&copy;Copyright 2017 GiftPitch</p>
 
-				<div class="float-r marg-l-15 ms-marg-0-0-20-0 ms-w-100pct">
-					<img src="assets/images/facebook.png" alt="Facebook" class="marg-5-0-0-5 w-22"><a href="#occasions">
-					<img src="assets/images/twitter.png" alt="Twitter" class="marg-5-0-0-5 w-22"><a href="#occasions">
-					<img src="assets/images/instagram.png" alt="Instagram" class="marg-5-0-0-5 w-22"><a href="#occasions">
-					<img src="assets/images/pinterest.png" alt="Pinterest" class="marg-5-0-0-5 w-22"><a href="#occasions">
+				<div class="float-r marg-l-15 ms-marg-0-0-20-0 ms-w-100pct">	
+					<!-- FACEBOOK -->
+					<a href="https://www.facebook.com/GiftPitch-324455947998632/" target="_blank"><img src="assets/images/facebook.png" alt="Facebook" class="marg-5-0-0-5 w-22"></a>
+					<!-- TWITTER -->
+					<a href="https://twitter.com/GiftPitch?lang=en" target="_blank"><img src="assets/images/twitter.png" alt="Twitter" class="marg-5-0-0-5 w-22"></a>
+					<!-- INSTAGRAM -->
+					<a href="http://www.instagram.com" target="_blank"><img src="assets/images/instagram.png" alt="Instagram" class="marg-5-0-0-5 w-22"></a>
+					<!-- PINTEREST -->
+					<a href="http://www.pinterest.com" target="_blank"><img src="assets/images/pinterest.png" alt="Pinterest" class="marg-5-0-0-5 w-22"></a>
 				</div>
 
 			</div>
